# test_project

./: Dockerfile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml  sample.env
nginx/: Dockerfile  nginx.conf
src/: main.py
src/core/: config.py
src/data/: images_data.csv
src/db/: base.py  sqlite_storage.py  storage.py
src/db/migrations/: env.py
src/db/migrations/versions/: 1ad67e377dbd_added_image_table.py
src/models/: image.py
src/public/: index.html
src/services/: csv_service.py  image_service.py
