[tool.poetry]
name = "Test Project for RtSoft"
version = "0.1.0"
description = ""
authors = ["Pavel Demin <papyasishe@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.2"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
databases = "^0.6.0"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
